--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "mongoose": "^8.1.3",
     "pg": "^8.11.3",
     "sequelize": "^6.36.0",
-    "sqlite3": "5.0.2"
+    "sqlite3": "^5.1.7"
   }
 }
